* evtxeport:
  - non-xml export format use evtexport like approach (add functions to get
    specific event data)
* add recovery scan
* add debug function for binary XML token types
* codepage support
* flag internally if the file is corrupted (CRC mismatch)

Debug:
* libfwevt: character reference print trailing data

Recovery:
* scan for records in chunk free space

20130303
* added PackageMaker files

20130301
* fixed bug in handling recovered records when no records are available

20130226
* worked on error tolerance
* added debug output for file flags

20130210
* updated libcfile to allow reading from open files
* fixed incorrect name of resulting evtxexport binary in msvscpp files

20130209
* small fix in the libcdirectory msvscpp files
* updated dependencies
* made record parsing more error resilient for Archived evtx files

20130208
* worked on formatted strings
* added decimal representation to level

20130207
* worked on record parsing

20130206
* worked on record parsing
* merged <Data Name="ExtraInfo">\n</Data> into <Data Name="ExtraInfo"/>
  value consists of a single linefeed 0x0a

20130205
* library now parses records without template by default
* worked on message string
* message string now prints unused conversion specifiers

20130113
* updated msvscpp files
* updated examples

20130110
* updated manuals
* worked on pyevtx

20130109
* worked on pyevtx

20130107
* 2013 update
* updated dependencies

20121220
* worked on formatted message strings
* fixed for multi platform builds

20121219
* worked on formatted message strings

20121218
* worked on formatted message strings

20121217
* worked on formatted message strings

20121214
* worked on formatted message strings
* evtxexport: added decimal event number

20121213
* worked on formatted message strings

20121212
* worked on formatted message strings

20121125
* worked on formatted message strings
* evtxexport: detect double newlines and remove
* updated dependencies

20121122