@@ -65,6 +65,9 @@ Debug:
 Recovery:
 * scan for records in chunk free space
 
+20130307
+* updated macosx files
+
 20130303
 * added PackageMaker files
 
